inspected the data and latest date query

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -40,12 +40,12 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func, inspect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 6
     }
    ],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +100,46 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "id INTEGER\nstation TEXT\ndate TEXT\nprcp FLOAT\ntobs FLOAT\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "columns = inspector.get_columns('measurement')\n",
+    "for column in columns:\n",
+    "    print(column[\"name\"], column[\"type\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "id INTEGER\nstation TEXT\nname TEXT\nlatitude FLOAT\nlongitude FLOAT\nelevation FLOAT\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "columns = inspector.get_columns('station')\n",
+    "for column in columns:\n",
+    "    print(column[\"name\"], column[\"type\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,11 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "('2017-08-23')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
    "source": [
-    "# Find the most recent date in the data set."
+    "# Find the most recent date in the data set.\n",
+    "latestDate = (session.query(Measurement.date)\n",
+    "                     .order_by(Measurement.date.desc())\n",
+    "                     .first())\n",
+    "latestDate"
    ]
   },
   {
