--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -167,29 +167,37 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 26
     }
    ],
    "source": [
     "# Find the most recent date in the data set.\n",
-    "latestDate = (session.query(Measurement.date)\n",
-    "                     .order_by(Measurement.date.desc())\n",
-    "                     .first())\n",
-    "latestDate"
+    "session.query(Measurement.date).order_by(Measurement.date.desc()).first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "('2016-08-23')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
+    "session.query(Measurement.date).order_by(Measurement.date.desc()).first()\n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "\n",
-    "\n",
+    "session.query(Measurement.date).filter(Measurement.date == \"2016-08-23\").first()\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
     "\n",
     "\n",
